--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,21 @@
 	--inner-shadow-0: inset 0 0 0 #d0d0d0, inset 0 0 0 #f8f8f8;
 }
 
+/*-------- override custom css variables for dark theme --------*/
+body.dark{
+	--bg-black-900: #ffffff;
+	--bg-black-100: #353535;
+	--bg-black-50: #2b2c2f;
+	--bg-opacity: rgba(43,44,47,0.5);
+	--text-black-900: #ffffff;
+	--text-black-700: #ffffff;
+	--text-black-600: #bbbbbb;
+	--outer-shadow: 3px 3px 3px #222327, -3px -3px 3px #363636;
+	--outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+	--inner-shadow: inset 3px 3px 3px #222327, inset -3px -3px 3px #363636;
+	--inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
+}
+
 body{
 	font-size: 16px;
 	line-height: 1.5;
@@ -122,7 +137,7 @@ img{
 	padding: 10px 25px;
 	font-size: 16px;
 	font-weight: 500;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	background-color: transparent;
 	line-height: 1.5;
 	cursor: pointer;
@@ -130,6 +145,7 @@ img{
 	transition: all 0.3s ease;
 	display: inline-block;
 	border: none;
+	text-transform: uppercase;
 }
 
 .btn-1:after{
@@ -170,7 +186,7 @@ img{
 .effect-3{
 	height: 180px;
 	width: 180px;
-	border: 25px solid var(--skin-color-blue);
+	border: 25px solid var(--skin-color);
 	border-radius: 50%;
 	left: 50%;
 	top: -110px;
@@ -274,10 +290,64 @@ img{
 	display: block;
 	font-size: 16px;
 	font-weight: 600;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
+}
+
+.section.hide{
+	display: none;
 }
 
 
+/*---------------- preloader -------------------*/
+.preloader{
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1500;
+	background-color: var(--bg-black-50);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.preloader.fade-out{
+	opacity: 0;
+	transition: all 0.6s ease;
+}
+
+.preloader .box{
+	width: 65px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.preloader .box div{
+	height: 15px;
+	width: 15px;
+	background-color: var(--skin-color);
+	border-radius: 50%;
+	animation: loaderAni 1s ease infinite;
+}
+
+.preloader .box div:nth-child(2){
+	animation-delay: 0.1s;
+}
+
+.preloader .box div:nth-child(3){
+	animation-delay: 0.2s;
+}
+
+@keyframes loaderAni{
+	0%, 100%{
+		transform: translateY(0);
+	}
+	50%{
+		transform: translateY(-30px);
+	}
+}
 
 /*-------- header -----------*/
 .header{
@@ -297,9 +367,9 @@ img{
 	height: 40px;
 	width: 40px;
 	font-size: 24px;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	border-radius: 50%;
-	border: 2px solid var(--skin-color-blue);
+	border: 2px solid var(--skin-color);
 	font-weight: 600;
 	text-transform: uppercase;
 }
@@ -363,6 +433,39 @@ img{
 	overflow-y: auto;
 }
 
+.fade-out-effect{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--bg-black-50);
+	z-index: -1;
+	visibility: hidden;
+}
+
+.fade-out-effect.active{
+	visibility: visible;
+	z-index: 1000;
+	animation: fadeOut 0.3s ease-out;
+}
+
+@keyframes fadeOut{
+	0%{
+		opacity: 1;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+
+.nav-menu.open{
+	visibility: visible;
+	opacity: 1;
+	z-index: 999;
+	transition: all 0.3s ease-in;
+}
+
 .nav-menu .close-nav-menu{
 	height: 40px;
 	width: 40px;
@@ -375,7 +478,7 @@ img{
 	top: 15px;
 	cursor: pointer;
 	text-align: center;
-	color: var(--bg-black-600);
+	color: var(--text-black-600);
 	transition: all 0.3s ease;
 }
 
@@ -410,7 +513,7 @@ img{
 	display: inline-block;
 	font-size: 28px;
 	font-weight: 600;
-	color: var(--text-black-700);
+	color: var(--text-black-600);
 	padding: 5px 30px;
 	text-transform: capitalize;
 	border-radius: 30px;
@@ -418,7 +521,7 @@ img{
 }
 
 .nav-menu ul li a.active{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 
@@ -463,38 +566,35 @@ img{
 .home-section .home-text h1{
 	font-size: 55px;
 	font-weight: 700;
-	color: var(--skin-color-blue);
-
+	color: var(--skin-color);
+	margin: 0;
 }
 
 .home-section .home-text h3{
 	font-size: 20px;
 	font-weight: 500;
-	color: var(--text-black-700);
+	color: var(--text-black-600);
 	margin: 0;
 	text-transform: capitalize;
 }
 
 .home-section .home-text .btn-1{
 	margin-top: 30px;
-
 }
 
 .home-section .home-img .img-box{
-	/*background-color: darkred;*/
-	width: 600px;
+	max-width: 550px;
 	height: auto;
 	display: block;
 	margin: auto;
-	/*border-radius: 50%;*/
+	border-radius: 7%;
 	padding: 15px;
 }
 
 .home-section .home-img .img-box img{
-	/*background-color: yellow;*/
 	width: 100%;
 	height: 470px;
-	/*border-radius: 50%;*/
+	border-radius: 7%;
 	border: 10px solid transparent;
 }
 
@@ -550,7 +650,7 @@ img{
 }
 
 .about-section .about-img .social-links a:hover{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .about-section .about-info{
@@ -600,7 +700,7 @@ img{
 }
 
 .about-section .about-tabs .tab-item.active{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .about-section .tab-content{
@@ -727,7 +827,7 @@ img{
 	line-height: 40px;
 	border-radius: 50%;
 	font-size: 16px;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	position: absolute;
 	top: 18px;
 }
@@ -742,7 +842,7 @@ img{
 
 .about-section .timeline .timeline-item-inner span{
 	font-weight: 500;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	display: block;
 	margin: 0 0 10px;
 	text-transform: capitalize;
@@ -827,7 +927,7 @@ img{
 }
 
 .about-section .team .team-item .social-links a:hover{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 
@@ -889,6 +989,7 @@ img{
 	display: block;
 	margin: 0 auto 30px;
 	position: relative;
+	color: var(--text-black-600);
 }
 
 .service-section .service-item-inner .icon:after{
@@ -917,7 +1018,7 @@ img{
 }
 
 .service-section .service-item-inner:hover .icon i{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .service-section .service-item-inner h3{
@@ -975,7 +1076,7 @@ img{
 }
 
 .portfolio-section .filter-item.active{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .portfolio-section .portfolio-item{
@@ -1020,7 +1121,7 @@ img{
 	text-transform: capitalize;
 	font-size: 16px;
 	font-weight: 500;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	transition: all 0.3s ease;
 	position: absolute;
 	left: 0;
@@ -1087,7 +1188,7 @@ img{
 .portfolio-popup .pp-loader div{
 	height: 40px;
 	width: 40px;
-	border: 3px solid var(--skin-color-blue);
+	border: 3px solid var(--skin-color);
 	border-radius: 50%;
 	border-right: 3px solid transparent;
 	animation: spin 2s linear infinite;
@@ -1182,7 +1283,7 @@ img{
 }
 
 .portfolio-popup .info ul li a{
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .portfolio-popup .info ul li:last-child{
@@ -1225,7 +1326,7 @@ img{
 	border-radius: 30px;
 	font-size: 16px;
 	font-weight: 500;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	cursor: pointer;
 	padding: 0 15px;
 	top: 15px;
@@ -1318,6 +1419,7 @@ img{
 	max-width: 600px;
 	margin: auto;
 	padding: 0 15px;
+	flex-wrap: wrap;
 }
 
 .testimonial-section .testi-slider{
@@ -1384,7 +1486,7 @@ img{
 .testimonial-section .testi-slider-nav span{
 	height: 40px;
 	width: 40px;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 	display: inline-block;
 	font-size: 20px;
 	cursor: pointer;
@@ -1427,7 +1529,7 @@ img{
 
 .contact-section .contact-item-inner i{
 	font-size: 25px;
-	color: var(--skin-color-blue);
+	color: var(--skin-color);
 }
 
 .contact-section .contact-item-inner span{
