--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,26 @@
 
+@media(max-width: 1016px){
+	.about-section .team .team-item:nth-child(odd){
+		flex: 0 0 30%;
+		max-width: 30%;
+		padding: 0 20px;
+		margin: 0 100px 0 100px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+	}
+	.about-section .team .team-item:nth-child(even){
+		flex: 0 0 30%;
+		max-width: 30%;
+		padding: 0 20px;
+		margin: 0 80px 0 100px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+	}
+}
+
+
 @media(max-width: 991px){
 	.portfolio-section .portfolio-item,
 	.service-section .service-item{
@@ -10,6 +32,28 @@
 		max-width: 600px;
 		margin: auto;
 		padding: 0 15px;
+	}
+
+	.about-section .team .team-item:nth-child(odd){
+		flex: 0 0 30%;
+		max-width: 30%;
+		padding: 0 20px;
+		margin: 0 100px 0 100px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+	}
+	.about-section .team .team-item:nth-child(even){
+		flex: 0 0 30%;
+		max-width: 30%;
+		padding: 0 20px;
+		margin: 0 0 0 100px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+	}
+	.about-section .team .team-item .social-links a{
+		margin-bottom: 10px;
 	}
 }
 
@@ -58,12 +102,16 @@
 	.about-section .about-img{
 		padding: 30px;
 	}
+	.about-section .skills .skill-item{
+		padding: 0 30px;
+	}
 	.about-section .timeline .timeline-item:nth-child(odd){
-		padding-right: 15px;
+		padding-right: 30px;
 		text-align: left;
 		padding-left: 75px;
 	}
 	.about-section .timeline .timeline-item:nth-child(even){
+		padding-right: 30px;
 		padding-left: 75px;
 	}
 	.about-section .timeline:before{
@@ -92,6 +140,26 @@
 		margin: auto;
 		padding: 0 15px;
 	}
+
+	.about-section .team .team-item:nth-child(odd){
+		flex: 0 0 40%;
+		max-width: 40%;
+		padding: 0 20px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+		left: 15%;
+	}
+	.about-section .team .team-item:nth-child(even){
+		flex: 0 0 40%;
+		max-width: 40%;
+		padding: 0 20px;
+		flex-wrap: wrap;
+		display: inline-block;
+		position: relative;
+		left: 15%;
+		margin-top: 30px;
+	}
 }
 
 @media(max-width: 574px){
@@ -111,5 +179,23 @@
 		max-width: 400px;
 		margin: auto;
 		padding: 0 15px;
+	}
+
+	.about-section .team .team-item:nth-child(odd){
+		flex: 0 0 70%;
+		max-width: 70%;
+		padding: 0;
+		flex-wrap: wrap;
+		word-wrap: break-word;
+		margin-left: 20px;
+	}
+	.about-section .team .team-item:nth-child(even){
+		flex: 0 0 70%;
+		max-width: 70%;
+		padding: 0;
+		flex-wrap: wrap;
+		margin-top: 50px;
+		word-wrap: break-word;
+		margin-left: 20px;
 	}
 }
